# trading_tools

./: .env  .gitignore  CODE_REVIEW.md  CODE_REVIEW_v10.md  CODE_REVIEW_v11.md  CODE_REVIEW_v12.md  CODE_REVIEW_v13.md  CODE_REVIEW_v2.md  CODE_REVIEW_v3.md  CODE_REVIEW_v4.md  CODE_REVIEW_v5.md  CODE_REVIEW_v6.md  CODE_REVIEW_v7.md  CODE_REVIEW_v8.md  CODE_REVIEW_v9.md  CODE_RIGOR_ANALYSIS.md  DATA_SOURCE_ALTERNATIVES.md  DOCKER_NECESSITY_ANALYSIS.md  README.md  batch1.json  design_doc_phase0.md
backend/: .env  config.yaml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  ai.py  analysis.py  news.py  (+8 more)
backend/app/core/: __init__.py  celery_app.py  database.py  query_router.py  redis_client.py
backend/app/models/: __init__.py  news.py  portfolio.py  stock.py  timescale.py
backend/app/prompts/: chat_prompt.txt  explain_prompt.txt  report_prompt.txt
backend/app/schemas/: __init__.py  common.py  market.py  portfolio.py  screener.py  stock.py
backend/app/services/: __init__.py  ai_chat.py  ai_explainer.py  backtester.py  llm_service.py  market_service.py  quote_gateway.py  redis_stream.py  report_service.py  risk_guard.py  stock_picker.py
backend/app/tasks/: __init__.py  daily_report.py  data_collect.py  data_quality.py  news_analysis.py  news_tasks.py  screening.py
backend/app/templates/: report.html
backend/docs/: v5_code_review_fix_record.md
backend/scripts/: compute_factors.py  sync_history.py
backend/templates/: report.html
backend/tests/: __init__.py  conftest.py
(+101 files in other folders)
