[tool.poetry]
name = "a-stock-monitor"
version = "0.1.0"
description = "A股盯盘与复盘系统后端"
authors = ["trader"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110"
uvicorn = { version = "*", extras = ["standard"] }
sqlalchemy = ">=2.0"
asyncpg = ">=0.29"
celery = ">=5.3"
redis = ">=5.0"
pandas = ">=2.2"
numpy = ">=1.26"
akshare = ">=1.14"
websockets = ">=12.0"
httpx = ">=0.27"
pydantic = ">=2.6"
pydantic-settings = "*"
python-dotenv = "*"
loguru = "*"
duckdb = ">=1.0"
pandas-ta = ">=0.4"
jinja2 = "*"
playwright = "*"
python-multipart = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
